<resources>
    <string name="app_name">Inspect+</string>

    <string name="et_username_hint">Enter Your Username Here</string>
    <string name="et_password_hint">Enter Your Password Here</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_signup_text">Signup</string>
    <string name="action_settings">Settings</string>
    <string name="tv_contactus_text">Contact Us</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="title_activity_Login">Login Or Sign Up</string>

    <string name="create_new_account">Create New Account</string>
    <string name="et_name_hint">Enter Your Name Here</string>
    <string name="et_organisation_name_hint">Enter Your Organisation Name Here</string>
    <string name="et_title_hint">Enter Your Title Here</string>
    <string name="et_organisation_type_hint">Enter Your Organisation Type</string>
    <string name="et_address_hint">Enter Your Address</string>
    <string name="et_mobile_hint">Mobile</string>
    <string name="et_landline_hint">Landline</string>
    <string name="et_email_hint">Enter Your Email Address Here</string>
    <string name="et_card_num_hint">Enter Card Number</string>
    <string name="sp_cardtype_header">Select A Card Type</string>
    <string name="et_cvv_hint">Enter CVV</string>

    <string name="title_activity_account_settings">AccountSettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="tv_lbl_name">Name:</string>
    <string name="registeredprojects">Registered Projects</string>
    <string name="title_activity_inspection_events">InspectionEventsActivity</string>
    <string name="tv_assigned_certifier">Assigned Certifier</string>
    <string name="tv_assigned_certifier_company_title">Assigned Certifier Company</string>
    <string name="tv_planned_inspections_title">Planned Inspections</string>
    <string name="tv_unplanned_inspections_title">Un-Planned Inspections</string>
    <string name="tv_ancilliary_certifier_title">Ancilliary Certifier</string>
    <string name="tv_project_number_title">Project Number</string>
    <string name="tv_project_name_title">Project Name</string>
    <string name="tv_inspection_plan_ref_number_title">Inspection Plan Reference Number</string>
    <string name="tv_inspection_event_category_title">Inspection Event Category</string>
    <string name="tv_building_element_classification_title">Building Element Classification</string>
    <string name="tv_projects_label">Projects</string>
    <string name="logout">Logout</string>
    <string name="generic_server_down">Please Check Your Internet Connection</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="generic_error">Please check if you are connected to the Internet</string>
    <string name="gallery">Gallery</string>

    <string-array name="regulations">
        <item>Regulation 1</item>
        <item>Regulation 2</item>
        <item>Regulation 3</item>
    </string-array>
    <string-array name="action_owners">
        <item>Action Owner 1</item>
        <item>Action Owner 2</item>
        <item>Action Owner 3</item>
    </string-array>
    <string name="title_activity_image_upload">ImageUploadActivity</string>
    <string name="upload">Upload</string>
    <string name="inspection_event_detail">Inspection Event Details</string>
    <string name="camera">Camera</string>
    <string name="label_upload">Upload</string>

</resources>
