<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="inspectplus.dpwgroup.com.inspectplus.InspectionEventsActivity">

    <TextView
        android:id="@+id/tv_assigned_certifier_title"
        android:text="@string/tv_assigned_certifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_assigned_certifier_company_title"
        android:text="@string/tv_assigned_certifier_company_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_assigned_certifier_title" />

    <TextView
        android:id="@+id/tv_ancilliary_certifier_title"
        android:text="@string/tv_ancilliary_certifier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_assigned_certifier_company_title" />

    <TextView
        android:id="@+id/tv_assigned_certifier_planned_inspections_title"
        android:text="@string/tv_planned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ancilliary_certifier_title" />

    <TextView
        android:id="@+id/tv_assigned_certifier_unplanned_inspections_title"
        android:text="@string/tv_unplanned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_assigned_certifier_planned_inspections_title" />

    <TextView
        android:id="@+id/tv_ancilliary_certifier_company_title"
        android:text="Ancilliary Certifier Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_assigned_certifier_unplanned_inspections_title" />

    <TextView
        android:id="@+id/tv_ancilliary_certifier_planned_inspections_title"
        android:text="@string/tv_planned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ancilliary_certifier_company_title" />

    <TextView
        android:id="@+id/tv_ancilliary_certifier_unplanned_inspections_title"
        android:text="@string/tv_unplanned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ancilliary_certifier_planned_inspections_title" />

    <TextView
        android:id="@+id/tv_project_number"
        android:text="@string/tv_project_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ancilliary_certifier_unplanned_inspections_title" />

    <TextView
        android:id="@+id/tv_project_name"
        android:text="@string/tv_project_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_number" />
    <TextView
        android:id="@+id/tv_inspection_plan_ref_number_title"
        android:text="@string/tv_inspection_plan_ref_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_project_name" />
    <TextView
        android:id="@+id/tv_inspection_plan_ref_number_planned_inspection_title"
        android:text="@string/tv_planned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_inspection_plan_ref_number_title" />

    <TextView
        android:id="@+id/tv_inspection_plan_ref_number_unplanned_inspection_title"
        android:text="@string/tv_unplanned_inspections_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_inspection_plan_ref_number_planned_inspection_title" />
</RelativeLayout>
